# ArenaToolBox-BSATool

./: .gitignore  BSATool.pri  BSATool.pro  CMakeLists.txt  README.md
TemplateEditor/: mainwindow.cpp  mainwindow.hpp
configuration/: ARENA.cfg.bsatool
configuration/ARENA/: PAL.COL
oldSrc/: askuserwindow.cpp  askuserwindow.hpp  bsafile.cpp  bsafile.hpp  image.hpp  imageviewer.cpp  previewpalette.cpp  various.hpp
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  bsafile.cpp  bsafile.hpp  globalImage.cpp  globalImage.hpp  image.cpp  image.hpp  imageviewer.hpp  mainwindow.cpp  mainwindow.hpp  previewpalette.hpp  various.cpp  various.hpp
src/assets/: Cfa.cpp  Cfa.h  Dfa.cpp  Dfa.h  FileType.cpp  FileType.h  Img.cpp  Img.h  Palette.cpp  Palette.h  img.cpp  img.h
src/bsa/: BsaArchive.cpp  BsaArchive.h  BsaFile.cpp  BsaFile.h
src/components/: ConsoleDock.cpp  ConsoleDock.h  FileDisplayer.cpp  FileDisplayer.h  FileListViewer.cpp  FileListViewer.h  FileListViewerItem.h  ImageDisplayer.cpp  ImageDisplayer.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  ToolBar.cpp  ToolBar.h
src/components/bsaExplorer/: MainWindow.cpp  MainWindow.h
src/components/console/: ConsoleDock.cpp  ConsoleDock.h
src/components/fileDisplay/: AnimationDisplayer.cpp  AnimationDisplayer.h  FileDisplayer.cpp  FileDisplayer.h  ImageDisplayer.cpp  ImageDisplayer.h  ImagesCollectionDisplayer.cpp  ImagesCollectionDisplayer.h  PaletteDisplayer.cpp  PaletteDisplayer.h  TextDisplayer.cpp  TextDisplayer.h
src/components/fileList/: FileListViewer.cpp  FileListViewer.h  FileListViewerItem.cpp  FileListViewerItem.h
src/components/menu/: MenuBar.cpp  MenuBar.h
src/components/toolbar/: ToolBar.cpp  ToolBar.h
src/configuration/: ApplicationConfiguration.cpp  ApplicationConfiguration.h  ArchiveConfiguration.cpp  ArchiveConfiguration.h  ArchiveConfigurationLoader.cpp  ArchiveConfigurationLoader.h  FileConfiguration.cpp  FileConfiguration.h
src/designpatterns/: Singleton.h
src/error/: Error.cpp  Error.h  Status.cpp  Status.h
src/log/: Logger.cpp  Logger.h
src/main/: main.cpp
src/utils/: BitsReader.cpp  BitsReader.h  BitsStreams.cpp  BitsStreams.h  Compression.cpp  Compression.h  HuffmanTree.cpp  HuffmanTree.h  SlidingWindow.cpp  SlidingWindow.h
test/: BSAToolTest.pri  CMakeLists.txt
test/bsa/: BsaFileTest.cpp  BsaFileTest.h
test/main/: main.cpp
test/ressources/: MENU_08_resetTree.IMG  compressedDeflate.data  compressedDeflateWorstCase.data  compressedLZSS.data  compressedRLEByLine.data  decryptedINF.data  encryptedINF.data  uncompressedDeflate.data  uncompressedDeflateWorstCase.data  uncompressedLZSS.data  uncompressedRLEByLine.data
test/utils/: CompressionTest.cpp  CompressionTest.h  CompressionTestNativeDeflate.cpp
